--- a/e-commerce-frontend/src/styles/app.scss
+++ b/e-commerce-frontend/src/styles/app.scss
@@ -132,6 +132,21 @@
   }
 }
 
+.checkout-container{
+  max-width: 400px;
+  width: 100%;
+  margin: auto;
+  >form{
+    @include flex(column, flex-start, strech, 2rem);
+
+    >button{
+      @include btn(1rem, $color3, $color1);
+      width: 100%;
+      font-size: 1.1rem;
+    }
+  }
+}
+
 
  
 
